# DexterousHandKinematic

./: CMakeLists.txt  README.md  compile&run.sh  dexterous_hand  dexterous_hand.c  dexterous_hand.h  main.c  main.h  main.py  sim.py  sim_2.py  test.usd  test_a.usda
